@@ -1,2 +1,0 @@
-Jersey extends Twisted's Application framework for use with command-line
-interfaces.
