@@ -1,21 +1,0 @@
-# $NetBSD: Makefile,v 1.20 2022/02/13 08:53:43 wiz Exp $
-
-DISTNAME=	jersey-0.1.5
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
-CATEGORIES=	devel python
-MASTER_SITES=	${MASTER_SITE_PYPI:=j/jersey/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://pypi.python.org/pypi/jersey
-COMMENT=	Framework for building Twisted Python command-line interfaces
-LICENSE=	modified-bsd
-
-#BUILD_DEPENDS+=	${PYPKGPREFIX}-twisted>=10.0.0:../../net/py-twisted19
-DEPENDS+=		${PYPKGPREFIX}-twisted>=10.0.0:../../net/py-twisted19
-DEPENDS+=		${PYPKGPREFIX}-automat-[0-9]*:../../devel/py-automat
-
-PYTHON_VERSIONS_ACCEPTED=	27 # as of 0.1.5
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
