@@ -1,36 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2012/04/20 18:49:25 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/jersey/__init__.py
-${PYSITELIB}/jersey/__init__.pyc
-${PYSITELIB}/jersey/__init__.pyo
-${PYSITELIB}/jersey/_version.py
-${PYSITELIB}/jersey/_version.pyc
-${PYSITELIB}/jersey/_version.pyo
-${PYSITELIB}/jersey/cases/__init__.py
-${PYSITELIB}/jersey/cases/__init__.pyc
-${PYSITELIB}/jersey/cases/__init__.pyo
-${PYSITELIB}/jersey/cases/base.py
-${PYSITELIB}/jersey/cases/base.pyc
-${PYSITELIB}/jersey/cases/base.pyo
-${PYSITELIB}/jersey/cases/test_cli.py
-${PYSITELIB}/jersey/cases/test_cli.pyc
-${PYSITELIB}/jersey/cases/test_cli.pyo
-${PYSITELIB}/jersey/cases/test_inet.py
-${PYSITELIB}/jersey/cases/test_inet.pyc
-${PYSITELIB}/jersey/cases/test_inet.pyo
-${PYSITELIB}/jersey/cases/test_log.py
-${PYSITELIB}/jersey/cases/test_log.pyc
-${PYSITELIB}/jersey/cases/test_log.pyo
-${PYSITELIB}/jersey/cli.py
-${PYSITELIB}/jersey/cli.pyc
-${PYSITELIB}/jersey/cli.pyo
-${PYSITELIB}/jersey/inet.py
-${PYSITELIB}/jersey/inet.pyc
-${PYSITELIB}/jersey/inet.pyo
-${PYSITELIB}/jersey/log.py
-${PYSITELIB}/jersey/log.pyc
-${PYSITELIB}/jersey/log.pyo
