@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.4491 2022/09/11 17:52:34 wiz Exp $
+$NetBSD: CHANGES-2022,v 1.4492 2022/09/11 17:54:57 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -6639,3 +6639,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated devel/tig to 2.5.7 [fcambus 2022-09-11]
 	Added textproc/py-lunr version 0.6.2 [wiz 2022-09-11]
 	Updated devel/py-doctor to 22.7.0 [wiz 2022-09-11]
+	Removed devel/py-jersey [wiz 2022-09-11]
